--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8808914837870866"
+     crossorigin="anonymous"></script>
     <meta property="og:title" content="Aloyise Biju Mathew - Cybersecurity Analyst" />
     <meta property="og:description" content="Cybersecurity analyst specializing in application security, cloud security, and DevSecOps." />
     <meta property="og:type" content="website" />
